--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <!-- Basic Page Needs
 ================================================== -->
-<title>Home</title>
+<title>欢迎来到沐笙的主页</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="">
