--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!-- Mobile Specific Metas 
 ================================================== -->
 <meta content="width=device-width,initial-scale=1" name="viewport">
+<link rel="shortcut icon" href="images/favicon_musheng.ico">
 
 <!-- Favicons
 ================================================== -->
